2002-08-14  Graydon Hoare  <graydon@redhat.com>

	* mf-hooks.c: Change __real_strlen() to __real_strlen()+1 when
	verifying non-size-limited string extents.

2002-08-14  Frank Ch. Eigler  <fche@redhat.com>

	* mf-hooks.c: Make __wrap string* functions use __real_str[n]len
	instead of plain str[n]len for internal checks.
	* mf-runtime.c (__mf_violation): Print optional stack traceback.

2002-08-14  Frank Ch. Eigler  <fche@redhat.com>

	* mf-hooks.c: Remove #if-0 around hooks that are now ld-wrapped.

2002-08-13  Graydon Hoare  <graydon@redhat.com>

	* mf-runtime.c: Rework configuration to operate on
	environment variable options rather than #defines
	(__mf_violation): Add simple fork-a-gdb violaiton mode.
	(__mf_init): Set static __mf_active_p flag on startup,
	to inhibit mudflap wrap-based checking during crt0.s.
	* mf-runtime.h: Declare options structure.
	* mf-hooks.c: New wrappings for mem*, b*, str*
	libc functions (temporarily #if 0-ed out).

2002-08-12  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am, configure.in: New files.
	* Makefile.in, Makefile, configure, config.h.in: New generated files.
	* stamp-h.in, aclocal.m4: Ditto.

2002-08-08  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile: New file.
	* mf-config.h: New file: runtime configuration.
	* mf-hooks.c: New file: interposed libc functions.
	* mf-runtime.c: New file: bulk of runtime.
	* mf-runtime.h: New file: public functions.
