@@ -1,0 +1,2 @@
+char foo [10];
+strcpy(foo, "1234567890");
