@@ -1,0 +1,2 @@
+int foo [10][10];
+foo[9][0] = 0;
