@@ -1,0 +1,3 @@
+char foo [10];
+char bar [10];
+memcpy(foo, bar, 10);
