@@ -1,0 +1,7 @@
+char *foo;
+char *bar;
+
+foo = (char *)malloc (10);
+bar = (char *)malloc (10);
+
+memcpy(foo, bar, 10);
